overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,7 @@ ul[role=listbox]{
 	right:0px;
 	margin-right:15px;
 	color:darkgray ;
+	overflow-x:clip;
 	
 }
 
@@ -216,6 +217,7 @@ ul[role=listbox]{
 	margin:5px;
 	font-size:14px !important;
 }
+
 
 #git-stars{
 	margin-top: 5px;
